--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.1",
+    "ngrok": "^5.0.0-beta.2",
     "react": "18.2.0",
     "react-native": "0.74.5"
   },
